--- a/business.html
+++ b/business.html
@@ -43,11 +43,11 @@
       <div class="section">
         <div class="section1">
           <div class="img-slider">
-            <img src="sample1.jpg" alt="" class="img">
-            <img src="https://images.pexels.com/photos/3649765/pexels-photo-2536009.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="" class="img">
-            <img src="sample2.jpg" alt="" class="img">
-            <img src="sample4.jpg" alt="" class="img">
-            <img src="sample3.jpg" alt="" class="img">
+            <img src="1.jpg" alt="" class="img">
+            <img src="2.jpg" alt="" class="img">
+            <img src="3.jpg" alt="" class="img">
+            <img src="4.jpg" alt="" class="img">
+            <img src="5.jpg" alt="" class="img">
           </div>
   
         </div>
@@ -56,7 +56,7 @@
             <div class="items">
               <div class="img img1"><img src="https://images.pexels.com/photos/3649765/pexels-photo-4813347.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""></div>
               <div class="name">SHADES</div>
-              <div class="price">Rs50</div>
+              <div class="price">Rs80</div>
               <div class="info">Lorem ipsum dolor sit amet consectetur.</div>
             </div>
             <div class="items">
@@ -74,7 +74,7 @@
             <div class="items">
               <div class="img img1"><img src="https://www.pexels.com/photo/kitchen-knife-on-white-surface-4226864/" alt=""></div>
               <div class="name">Knife</div>
-              <div class="price">Rs120</div>
+              <div class="price">Rs60</div>
               <div class="info">Lorem ipsum dolor sit.</div>
             </div>
             <div class="items">
