--- a/business.html
+++ b/business.html
@@ -54,112 +54,112 @@
         <div id="section2" class="section2">
           <div class="container">
             <div class="items">
-              <div class="img img1"><img src="https://images.pexels.com/photos/3649765/pexels-photo-4813347.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""></div>
+              <div class="img img1"><img src="sunglasses.jpg" alt=""></div>
               <div class="name">SHADES</div>
               <div class="price">Rs80</div>
-              <div class="info">Lorem ipsum dolor sit amet consectetur.</div>
+              <div class="info"></div>
             </div>
             <div class="items">
-              <div class="img img2"><img src="https://images.pexels.com/photos/3649765/pexels-photo-3649765.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""></div>
+              <div class="img img2"><img src="hankies1.jpg" alt=""></div>
               <div class="name">Handker Chief</div>
               <div class="price">Rs60</div>
-              <div class="info">Lorem ipsum dolor sit.</div>
+              <div class="info"></div>
             </div>
             <div class="items">
-              <div class="img img3"><img src="https://www.pexels.com/photo/close-up-high-angle-view-of-camera-251454/" alt=""></div>
+              <div class="img img3"><img src="socks.jpg" alt=""></div>
               <div class="name">Socks</div>
               <div class="price">Rs50(3 pairs) </div>
-              <div class="info">Lorem ipsum dolor sit amet.</div>
+              <div class="info"></div>
             </div>
             <div class="items">
-              <div class="img img1"><img src="https://www.pexels.com/photo/kitchen-knife-on-white-surface-4226864/" alt=""></div>
+              <div class="img img1"><img src="knife.jpg" alt=""></div>
               <div class="name">Knife</div>
               <div class="price">Rs60</div>
-              <div class="info">Lorem ipsum dolor sit.</div>
+              <div class="info"></div>
             </div>
             <div class="items">
-              <div class="img img1"><img src="https://www.pexels.com/photo/yellow-orange-pink-and-blue-coloring-pens-on-white-notebook-998591/" alt=""></div>
+              <div class="img img1"><img src="pens.jpg" alt=""></div>
               <div class="name">Pens</div>
               <div class="price">Rs20</div>
-              <div class="info">Lorem ipsum dolor sit.</div>
+              <div class="info"></div>
             </div>
             <div class="items">
-              <div class="img img1"><img src="https://www.pexels.com/photo/nail-polish-on-white-background-3609620/" alt=""></div>
+              <div class="img img1"><img src="nail paint.jpg" alt=""></div>
               <div class="name">Nail Paint</div>
               <div class="price">Rs20</div>
-              <div class="info">Lorem ipsum dolor sit amet consectetur.</div>
+              <div class="info"></div>
             </div>
             <div class="items">
-              <div class="img img1"><img src="https://www.pexels.com/photo/red-brassiere-on-white-textile-3682271/" alt=""></div>
+              <div class="img img1"><img src="bra.jpg" alt=""></div>
               <div class="name">Bra</div>
               <div class="price">Rs200</div>
-              <div class="info">Lorem ipsum dolor sit.</div>
+              <div class="info"></div>
             </div>
             <div class="items">
-              <div class="img img1"><img src="https://media.istockphoto.com/photos/vintage-plates-with-silver-teaspoons-picture-id184363070" alt=""></div>
+              <div class="img img1"><img src="dinner.jpg" alt=""></div>
               <div class="name">DINNER SET</div>
               <div class="price">Rs1000</div>
-              <div class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+              <div class="info"></div>
             </div>
             <div class="items">
-              <div class="img img1"><img src="https://www.pexels.com/photo/woman-with-red-hair-wearing-red-blazer-159689/" alt=""></div>
+              <div class="img img1"><img src="" alt=""></div>
               <div class="name">hair color</div>
               <div class="price">Rs120</div>
-              <div class="info">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+              <div class="info"></div>
             </div>
             <div class="items">
-              <div class="img img1"><img src="https://www.pexels.com/photo/shallow-focus-photography-of-woman-in-red-top-1446161/" alt=""></div>
+              <div class="img img1"><img src="necklace.jpg" alt=""></div>
               <div class="name">Necklace</div>
               <div class="price">Rs500</div>
-              <div class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
+              <div class="info"></div>
             </div>
             <div class="items">
-              <div class="img img1"><img src="https://www.pexels.com/photo/yellow-spiral-notebooks-159682/" alt=""></div>
+              <div class="img img1"><img src="notebook.jpg" alt=""></div>
               <div class="name">Copies</div>
               <div class="price">Rs30</div>
-              <div class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
+              <div class="info"></div>
             </div>
             <div class="items">
-              <div class="img img1"><img src="https://www.pexels.com/photo/red-and-white-nescafe-printed-mug-on-brown-wooden-table-1002649/" alt=""></div>
+              <div class="img img1"><img src="coffee.jpg" alt=""></div>
               <div class="name">COFFEE</div>
               <div class="price">Rs10</div>
-              <div class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
+              <div class="info"></div>
             </div>
             <div class="items">
-              <div class="img img1"><img src="https://www.pexels.com/photo/selective-focus-photography-of-red-coca-cola-can-lot-on-box-1561147/" alt=""></div>
+              <div class="img img1"><img src="soft drinks.jpg" alt=""></div>
               <div class="name">Cold drinks</div>
               <div class="price">Rs100</div>
-              <div class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
+              <div class="info"></div>
             </div>
             <div class="items">
-              <div class="img img1"><img src="https://www.pexels.com/photo/photo-of-perfume-3059609/" alt=""></div>
+              <div class="img img1"><img src="perfume.jpg" alt=""></div>
               <div class="name">Perfume</div>
               <div class="price">Rs78</div>
-              <div class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
+              <div class="info">Something used to produce fragnance</div>
             </div>
             <div class="items">
-              <div class="img img1"><img src="https://www.pexels.com/photo/the-ordinary-product-line-3685530/" alt=""></div>
+              <div class="img img1"><img src="face crean.jpg" alt=""></div>
               <div class="name">Face Cream</div>
               <div class="price">Rs60</div>
-              <div class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
+              <div class="info">some irritate your skin or contribute to premature ageing</div>
             </div>
             <div class="items">
-              <div class="img img1"><img src="https://images.pexels.com/photos/4339598/pexels-photo-4339598.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt=""></div>
+              <div class="img img1"><img src="" alt=""></div>
               <div class="name">BAG</div>
               <div class="price">Rs40</div>
-              <div class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
+              <div class="info">A handbag; a purse.</div>
             </div>
             <div class="items">
               <div class="img img1"><img src="https://www.pexels.com/photo/face-masks-on-blue-background-3786155/" alt=""></div>
-              <div class="name">Face mask</div>
+              <div class="name">Sheet mask</div>
               <div class="price">Rs25</div>
-              <div class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
+              <div class="info"> sheet mask is a serum-soaked cloth sheet.</div>
             </div>
             <div class="items">
               <div class="img img1"><img src="https://www.pexels.com/photo/four-aligned-assorted-color-lipsticks-1625037/" alt=""></div>
               <div class="name">Lipstick</div>
               <div class="price">Rs56</div>
-              <div class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</div>
+              <div class="info">Comes in different shades</div>
             </div>
           </div>
   
