--- a/business.html
+++ b/business.html
@@ -150,13 +150,13 @@
               <div class="info">A handbag; a purse.</div>
             </div>
             <div class="items">
-              <div class="img img1"><img src="https://www.pexels.com/photo/face-masks-on-blue-background-3786155/" alt=""></div>
+              <div class="img img1"><img src="sheetmask.jpg"alt=""></div>
               <div class="name">Sheet mask</div>
               <div class="price">Rs25</div>
               <div class="info"> sheet mask is a serum-soaked cloth sheet.</div>
             </div>
             <div class="items">
-              <div class="img img1"><img src="https://www.pexels.com/photo/four-aligned-assorted-color-lipsticks-1625037/" alt=""></div>
+              <div class="img img1"><img src="lipstick.jpg" alt=""></div>
               <div class="name">Lipstick</div>
               <div class="price">Rs56</div>
               <div class="info">Comes in different shades</div>
