--- a/business.html
+++ b/business.html
@@ -144,7 +144,7 @@
               <div class="info">some irritate your skin or contribute to premature ageing</div>
             </div>
             <div class="items">
-              <div class="img img1"><img src="" alt=""></div>
+              <div class="img img1"><img src="bag.jpg" alt=""></div>
               <div class="name">BAG</div>
               <div class="price">Rs40</div>
               <div class="info">A handbag; a purse.</div>
