--- a/business.html
+++ b/business.html
@@ -48,6 +48,9 @@
             <img src="3.jpg" alt="" class="img">
             <img src="4.jpg" alt="" class="img">
             <img src="5.jpg" alt="" class="img">
+            <img src="3.jpg" alt="" class="img">
+            <img src="4.jpg" alt="" class="img">
+            <img src="5.jpg" alt="" class="img">
           </div>
   
         </div>
