--- a/business.html
+++ b/business.html
@@ -118,7 +118,7 @@
             </div>
             <div class="items">
               <div class="img img1"><img src="notebook.jpg" alt=""></div>
-              <div class="name">Copies</div>
+              <div class="name">notebook</div>
               <div class="price">Rs30</div>
               <div class="info"></div>
             </div>
